# osop-mcp

./: .mcp.json  AWESOME_MCP_PR.md  Dockerfile  README.md  __main__.py  pyproject.toml  smithery.json  tools.json
.github/workflows/: ci.yml
server/: main.py
tests/: conftest.py  test_common.py  test_convert.py  test_execute.py  test_optimize.py  test_render.py  test_risk_assess.py  test_server.py  test_validate.py
tests/fixtures/: high_risk_workflow.osop.yaml  valid_workflow.osop.yaml
tools/: common.py  convert.py  diff.py  execute.py  notion.py  optimize.py  osoplog.py  render.py  risk_assess.py  synthesize.py  validate.py
tools/_disabled/: llm_client.py
