[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osop-mcp"
version = "0.1.0"
description = "OSOP MCP Server — expose OSOP workflow operations as MCP tools for AI agents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "OSOP Contributors", email = "hello@osop.ai" },
]
keywords = ["osop", "mcp", "ai-agents", "workflow", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "jsonschema>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["server", "tools"]

[project.urls]
Homepage = "https://osop.ai"
Repository = "https://github.com/osop/osop-mcp"
Issues = "https://github.com/osop/osop-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
